2007-01-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 3.99.0 released (SVN tag: release-3-99-0)

	* Makefile.am: Added missing files to EXTRA_DIST

2007-01-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* ChangeLog-2006: ChangeLog entries from year 2006 moved to a
	separate file

	* doc/local/verification.doc: Updated to include tests under
	Solaris SunOS with ATLAS

2007-01-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to include recent tests
	under Cygwin/Windows XP and Solaris SunOS

2007-01-18  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to include recent test under
	Gentoo Linux with Intel MKL

2007-01-18  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.h, itpp/comm/ldpc.cpp: Changed one function name
	and updated documentation
	
	* doc/local/verification.doc: Updated 

2007-01-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc: Updated to reflect recent tests

	* NEWS: Consistancy and language improved. Thanks to Erik for his
	valuable comments.

2007-01-17  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/base/gf2mat.h, itpp/base/gf2mat.cpp, itpp/comm/ldpc.cpp:
	Changed int to bool and vice versa for code portability

2007-01-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/random.h: Fixed bug [1635988] by implementing the
	twist() function in a similar way as the original TWIST() macro
	from Takuji Nishimura's and Makoto Matsumoto's C sources.

	* win32/itpp.vcproj: Updated to reflect recent changes in source
	files' locations

2007-01-16  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp, tests/ldpc_test.ref: Changed rand() to
	randi() for code portability and to use it++ routines for random
	numbers

	* itpp/comm/llr.h: C convention for INT_MAX changed to C++
	
2007-01-16  Adam Piatyszek  <ediap@users.sourceforge.net>
